# AIAA3800-GroupProject

./: .env.example  .gitignore  .gitmodules  Modify_history.md  README.md  VPet.sln  VPet项目结构与功能添加指南.md  start-all.bat  start-all.ps1  stop-all.bat
VPet-Audio/: AudioPlugin.cs  VPet.Plugin.Audio.csproj
VPet-FaceDetect/: EmotionCareClient.cs  EmotionCareTuning.cs  FaceDetectConfig.cs  FaceDetectPlugin.cs  README.md  VPet.Plugin.FaceDetect.csproj  emotion-care.config.json
VPet-FaceDetect/1400_VPet-FaceDetect/: info.lps
VPet-Gaze/: GazeConfig.cs  GazeData.cs  GazePlugin.cs  GazeTrackingClient.cs  IdtFixationDetector.cs  README.md  VPet.Plugin.Gaze.csproj  requirements.txt
VPet-Gaze/python/: gaze_model.py  gaze_server.py  gaze_server_mock.py  progress_readme.md
VPet-Simulator.Windows/: mklink.bat
VPet-Speaking/: .gitignore  F5TtsClient.cs  GetMessage.cs  README.md  SpeakingPlugin.cs  VPet.Plugin.Speaking.csproj  XunfeiTtsClient.cs  get_message.py  setup.bat
audio/: run_backend.bat  setup.bat
audio/backend/: audio.py  care_prompts.py  main.py  pyproject.toml  transcript_utils.py  wav_utils.py  whisper_stt_base.py  whisper_stt_factory.py  whisper_stt_faster.py  whisper_stt_qwen3.py  whisper_stt_torch.py
audio/backend/learn_agent/: character_setting.py  llm.py  memory.py
audio/backend/learn_agent/agent/: agent.py
face-detect/: README.md  run_backend.bat  setup.bat
face-detect-local/: README.md  requirements.txt  run_backend.bat  setup.bat  setup.sh
face-detect-remote/: README.md  requirements.txt  run_backend.bat  run_relay.bat  setup.bat  setup.sh
(+33 files in other folders)
