[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx[socks]>=0.28.1",
    "icecream>=2.1.8",
    "openai>=2.15.0",
    "python-dotenv>=1.0.0",
    # 语音功能 — 核心依赖 (audio.py)
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "faster-whisper>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.10",
]
